second attempt to fix spacing of testimonial and action

--- a/styles.css
+++ b/styles.css
@@ -68,13 +68,13 @@ a {
 button {
     background-color: #3882F6;
     color: #E5E7EB;
-    width: 100px;
     padding: 10px 0px;
     border-radius: 10px;
     cursor: pointer;
 }
 .visit_button {
     border-color: #1F2937;
+    width: 100px;
 }
 
 .intro_img {
@@ -146,15 +146,14 @@ button {
     background-color: #3882F6;
     margin: 50px 300px;
     display: flex;
-    justify-content: center;
     align-items: center;
     padding: 50px 80px;
+    gap: 50px;
 }
 
 .action_text {
     margin-right: auto;
     color: #F9FAF8;
-    max-width: 400px;
 }
 
 .action_call {
@@ -165,6 +164,7 @@ button {
 
 .donate_button {
     border: 2px solid white;
+    width: 200px;
 }
 
 .footer {
